[package]
name = "linkleaner"
version = "1.9.2"
authors = ["Harsh Shandilya <me@msfjarvis.dev>"]
edition = "2021"
license = "MIT/Apache-2.0"
description = "Telegram bot that replaces social media links to enhance their previews"
keywords = ["telegram", "bot"]
repository = "https://github.com/msfjarvis/linkleaner"
homepage = "https://github.com/msfjarvis/linkleaner"
readme = "README.md"
include = ["src/**/*", "LICENSE-*", "README.md"]
publish = false

[features]
default = ["ddinstagram"]
console = ["console-subscriber"]
ddinstagram = []
journald = ["tracing-journald"]

[dependencies]
console-subscriber = { version = "0.2.0", optional = true }
dotenvy = "0.15.7"
futures = "*"
once_cell = "1.19.0"
regex = "1.10.4"
reqwest = { version = "*", default-features = false, features = [
  "json",
  "rustls-tls",
] }
serde = "*"
serde_derive = "*"
serde_json = "*"
teloxide = { git = "https://github.com/teloxide/teloxide", features = [
  "cache-me",
  "ctrlc_handler",
  "macros",
  "rustls",
], default-features = false }
tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.40"
tracing-journald = { version = "0.3.0", optional = true }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
