[package]
name = "linkleaner"
version = "2.6.2"
authors = ["Harsh Shandilya <me@msfjarvis.dev>"]
edition = "2024"
license = "MIT/Apache-2.0"
description = "Telegram bot that replaces social media links to enhance their previews"
keywords = ["telegram", "bot"]
repository = "https://github.com/msfjarvis/linkleaner"
homepage = "https://github.com/msfjarvis/linkleaner"
readme = "README.md"
include = ["src/**/*", "LICENSE-*", "README.md"]
publish = false

[features]
default = []
console = ["console-subscriber"]
journald = ["tracing-journald"]

[dependencies]
console-subscriber = { version = "0.4.0", optional = true }
dotenvy = "0.15.7"
futures = "*"
matchit = "0.8.5"
rand = "0.8.5"
regex = "1.10.4"
reqwest = { version = "*", default-features = false, features = [
  "json",
  "rustls-tls",
] }
serde = "*"
serde_derive = "*"
serde_json = "*"
teloxide = { git = "https://github.com/teloxide/teloxide", features = [
  "cache-me",
  "ctrlc_handler",
  "macros",
  "rustls",
], default-features = false }
tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.40"
tracing-journald = { version = "0.3.0", optional = true }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = "2.5.4"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
